--- a/index.html
+++ b/index.html
@@ -5,10 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <script src="source.js"></script>
+    <script src="source.js" defer></script>
     <title>Rock Paper Scissors</title>
 </head>
 <body>
-    
+<div class="buttons">
+    <button class="rock">Rock</button>
+    <button class="paper">Paper</button>
+    <button class="scissors">Scissors</button>
+</div>
+<div class="score"><div>
 </body>
 </html>
