--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
     <button class="paper">Paper</button>
     <button class="scissors">Scissors</button>
 </div>
-<div class="score"><div>
+<div id="scoreboard">
+    <h3 class="user">Your Score</h3>
+        <div class="score">thing</div>
+    <h3 class="computer">Computer Score</h3>
+        <div class="score"></div>
+<div>
 </body>
 </html>
