--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
-<div class="buttons">
-    <button class="rock">Rock</button>
-    <button class="paper">Paper</button>
-    <button class="scissors">Scissors</button>
-</div>
-<div id="scoreboard">
-    <h3 class="user">Your Score</h3>
-        <div class="score">thing</div>
-    <h3 class="computer">Computer Score</h3>
-        <div class="score"></div>
-<div>
-</body>
+    <div id="scoreboard">
+        <h3 id="user">Your Score</h3>
+        <div class="user-score">0</div>
+        <h3 id="computer">Computer Score</h3>
+        <div class="computer-score">0</div>
+        <div>
+    <div class="buttons">
+        <button class="rock">Rock</button>
+        <button class="paper">Paper</button>
+        <button class="scissors">Scissors</button>
+    </div>
+        </body>
 </html>
